Changed library to minified version

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fiddle Bird</title>
-    <script src="p5.js"></script>
+    <script src="p5.min.js"></script>
     <script src="main.js"></script>
     <style>
       * {
